모달 모두띄우기, 시간계산 등등 해보는중인데 잘안됨..

--- a/sixman/src/main/webapp/WEB-INF/views/attendance/test.html
+++ b/sixman/src/main/webapp/WEB-INF/views/attendance/test.html
@@ -27,6 +27,34 @@
         getClock();
         setInterval(getClock, 1000);
 
+        const clock3 = document.querySelector("#clock")
+
+        function getClock() {
+            const date = new Date();
+            const hours = String(date.getHours()).padStart(2, "0");
+            const min = String(date.getMinutes()).padStart(2, "0");
+            const sec = String(date.getSeconds()).padStart(2, "0");
+            clock.innerText = `${hours}:${min}:${sec}`;
+        }
+
+        getClock();
+        setInterval(getClock, 1000);
+
+
+        const cloc2 = document.querySelector("#clock")
+
+        function getClock() {
+            const date = new Date();
+            const hours = String(date.getHours()).padStart(2, "0");
+            const min = String(date.getMinutes()).padStart(2, "0");
+            const sec = String(date.getSeconds()).padStart(2, "0");
+            clock.innerText = `${hours}:${min}:${sec}`;
+        }
+
+        getClock();
+        setInterval(getClock, 1000);
+
+
     </script>
     
 </body>
