--- a/sixman/src/main/webapp/resources/css/addressBook/test.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/test.css
@@ -84,15 +84,15 @@
 
 .body {
     margin: auto;
-    margin-top: 30px;
+    margin-top: 15px;
     width: 90%;
     height: 80%;
     display: grid;
     justify-content: center;
     align-items: center;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 20px;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px;
 }
 .body-controller {
     width: 100%;
@@ -259,18 +259,20 @@
     position: relative;
     width: 100%;
     box-shadow: 1px 1px 3px 1px var(--bo-20);
-    border: 2px solid #fff;
+    border: 2.5px solid #fff;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.card-item:hover {
+.card-item:hover img {
+    transform: scale(1.2);
+    transition: 0.3s ease-in-out;
 }
 
 .card-item:has(input[type='checkbox']:checked) {
-    border: 2px solid #809ec8;
+    border: 2.5px solid #809ec8;
     box-shadow: none;
 }
 
@@ -279,7 +281,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
 }
 
 .card-item p {
@@ -287,11 +289,6 @@
     align-items: center;
     font-size: 13px;
     font-weight: 500;
-    color: var(--bo-80);
-}
-
-.card-item p span {
-    margin-right: 5px;
     color: var(--bo-80);
 }
 
@@ -314,20 +311,17 @@
     height: 40mm;
 }
 
-.card-bottom span {
-    font-size: 18px;
-}
-
 .card-bottom {
     position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 10px 15px 15px 15px;
+    padding: 5px 8px 8px 8px;
     gap: 5px;
 }
 
 #card-email {
+    font-size: 13px;
     color: #000;
 }
 
@@ -338,7 +332,7 @@
 #card-email strong,
 .card-item p strong,
 #card-address {
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 900;
     color: var(--main-color-dark);
     margin-right: 3px;
@@ -369,16 +363,18 @@
 }
 
 #card-company {
-    font-size: 14px;
-    font-weight: 600;
+    font-size: 15px;
+    font-weight: 900;
 }
 
-#card-company span {
-    font-size: 20px;
+#card-company i {
+    font-size: 15px;
+    color: var(--main-color-dark);
+    margin-right: 5px;
 }
 
 #card-name {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 900;
     color: var(--main-color-dark);
 }
