--- a/sixman/src/main/webapp/resources/css/project/create.css
+++ b/sixman/src/main/webapp/resources/css/project/create.css
@@ -83,7 +83,7 @@ input[name='title']{
 #startDate,
 #endDate {
     --margin-top: 11px;
-    width: 150px;
+    width: 120px;
     height: 40px;
     border-radius: 5px;
     border: 1px solid #aaa;
@@ -95,11 +95,16 @@ input[name='title']{
 }
 
 .prj2 {
-    margin-left: 170px;
+    margin-left: 30px;
 }
 
 .writer1 {
-    width: 150px;
+    margin-right: 30px;
+
+}
+
+.plusm {
+    width: 120px;
 }
 
 
@@ -108,6 +113,7 @@ input[name='title']{
 .hide{
     display: none;
 }
+
 /* .show{
     display: block;
 } */
@@ -144,6 +150,7 @@ input[name='title']{
     cursor: pointer;
     z-index: 1;
 }
+
 .select ul li{
     padding: 10px;
     text-align: center;
