--- a/sixman/src/main/webapp/resources/css/mainPage.css
+++ b/sixman/src/main/webapp/resources/css/mainPage.css
@@ -164,3 +164,145 @@
     flex-direction: column;
     gap: 5px;
 }
+
+#calendar-box {
+    padding: 30px;
+}
+
+.calendar{
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+}
+
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.year-month{
+    font-size: 30px;
+}
+
+.btn {
+    border: none;
+    width: 85px;
+    height: 30px;
+}
+
+.write {
+    width: 120px;
+    height: 40px;
+}
+
+
+.nav{
+    display: flex;
+    border-radius: 5px;
+    position: absolute;
+    right: 0;
+}
+
+.nav-btn{
+    width: 28px;
+    height: 30px;
+    border: none;
+    font-size: 16px;
+    line-height: 34px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.nav-btn:hover{
+    background-color: rgb(197, 197, 197);
+    border-radius: 5px;
+}
+
+.category-btn{
+    width: 48px;
+    height: 26px;
+    border: 1px solid #aaa;
+    background-color: #FFFFFF;
+    cursor: pointer;
+}
+
+.category-btn:hover{
+    background-color: #17a897;
+    color: #FFFFFF;
+    border: none;
+}
+
+.go-prev , .go-next {
+    color: #aaa;
+    font-weight: bold;
+}
+
+.go-prev:hover , .go-next:hover {
+    color: #333333;
+}
+
+.go-today{
+    width: 75px;
+}
+
+.days{
+    display: flex;
+    margin: 25px 0 10px;
+}
+
+.day{
+    width: calc(100% / 7);
+    text-align: center;
+}
+
+.dates{
+    display: flex;
+    flex-flow: row wrap;
+    height: 600px;
+    border-top: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+}
+
+.date{
+    width: calc(100% / 7);
+    padding: 15px;
+    text-align: right;
+    border-bottom: 1px solid #aaa;
+    border-left: 1px solid #aaa;
+    z-index: 1;
+}
+
+.day:nth-child(7n + 1),
+.date:nth-child(7n + 1){
+    color: #d13e3e;
+}
+
+.day:nth-child(7n),
+.date:nth-child(7n){
+    color: #396EE2;
+}
+
+.other{
+    opacity: 0.3;
+}
+
+.today{
+    position: relative;
+    color: #FFFFFF;
+}
+
+.today::before{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    width: 30px;
+    height: 30px;
+    display: block;
+    background-color: #2fa597;
+    border-radius: 50%;
+    content: '';
+}
