--- a/sixman/src/main/webapp/resources/css/addressBook/list.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/list.css
@@ -234,7 +234,7 @@
 
 .list-sortation {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 2fr;
+    grid-template-columns: 0.5fr 1fr 1.5fr 1fr 1.5fr 1.5fr;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -246,15 +246,24 @@
 
 .list-item {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 2fr;
+    grid-template-columns: 0.5fr 1fr 1.5fr 1fr 1.5fr 1.5fr;
     justify-content: center;
     align-items: center;
     text-align: center;
     border-bottom: 1px solid var(--bo-20);
     padding: 7px;
-    font-size: 14px;
+    font-size: 12px;
 }
 
+.list-item span {
+    font-size: 20px;
+    color: var(--bo-40);
+    cursor: pointer;
+}
+
+.list-item span:hover {
+    color: red;
+}
 /* newCard */
 .card-item {
     position: relative;
@@ -311,7 +320,8 @@
 .card-top img {
     width: 100%;
     height: 40mm;
-    z-index: 0;
+    z-index: -1;
+    border-radius: 5px 5px 0px 0px;
 }
 
 .card-bottom {
@@ -331,8 +341,13 @@
     color: #17a897;
 }
 
-#card-email strong,
-.card-item p strong,
+.info-email,
+.info-phone {
+    display: flex;
+}
+
+.info-email strong,
+.info-phone strong,
 #card-address {
     font-size: 13px;
     font-weight: 900;
