채팅방 만들기 내부의 전체목록 불러오기 성공, 채팅방 테이블 및 채팅방 설정 테이블 생성은 등원 후 할 예정입니다

--- a/sixman/src/main/webapp/resources/css/messenger.css
+++ b/sixman/src/main/webapp/resources/css/messenger.css
@@ -1064,3 +1064,7 @@ input[id="chat-setting-check02"]{
 	width:40%;
 	position:absolute;
 }
+
+.square>.square-img{
+	width:-webkit-fill-available;
+}
