--- a/sixman/src/main/webapp/resources/css/chat.css
+++ b/sixman/src/main/webapp/resources/css/chat.css
@@ -743,7 +743,7 @@
     justify-content: center;
     align-items: center;
 
-    display: flex;
+    display: none;
 }
 #file-inner{
     width: 80%;
