주소록 받아오기 page 받은 주소록 모두 insert delete 선택 insert delete 커밋

--- a/sixman/src/main/webapp/resources/css/addressBook/list.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/list.css
@@ -186,6 +186,11 @@
 .receiver span:hover {
     color: #000;
 }
+
+.receiver input[name='reciver'] {
+    display: none;
+}
+
 .receiver input[type='text'] {
     border: 1px solid var(--bo-20);
     border-radius: 2px;
