[임시] 채팅 파일업로드 수정, 전자결제 화면구현완료

--- a/sixman/src/main/webapp/resources/css/chat.css
+++ b/sixman/src/main/webapp/resources/css/chat.css
@@ -776,6 +776,9 @@
 #file-footer{
     width: 50%;
     align-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #file-inner-box{
