--- a/sixman/src/main/webapp/resources/css/messenger.css
+++ b/sixman/src/main/webapp/resources/css/messenger.css
@@ -177,6 +177,7 @@
 	margin-left:28%;
 	margin-bottom:10%;
 	position:absolute;
+	margin-right:20%;
 }
 
 .with-chat-subroomname2{
@@ -220,6 +221,7 @@
 }
 .chatroom-alarm-content{
 	font-size:12px;
+	width:80%;
 }
 .chatroom-exit-button{
 	margin-left:80%;
@@ -560,7 +562,7 @@
 }
 
 .chatroom1-1-2text-1-1{
-	margin-right:10%;
+/* 	margin-right:10%; */
 }
 #chatroom-1-3-icon{
 	font-size:40px;
@@ -587,6 +589,7 @@
 	width:100%;
 	height:10%;
 	background-color: white;
+	display:none;
 }
 
 
@@ -610,7 +613,7 @@
 
 /* 채팅룸 공통 */
 .chatroom{
-	margin-top:4%;
+	margin-top:2%;
 
 }
 
@@ -1066,5 +1069,37 @@ input[id="chat-setting-check02"]{
 }
 
 .square>.square-img{
-	width:-webkit-fill-available;
+	width:100%;
+	height:100%;
+	border-radius:100%;
+	background-size: cover;
+/* 	border : 1px solid black; */
+}
+
+.with-chat-data01>.square-first>.square-img{
+	width:100%;
+	height:100%;
+	border-radius:100%;
+	background-size: cover;
+}
+
+.chatroom-list-box-ajax{
+/* 	display:none; */
+/* 	margin-top:2%; */
+/* 	position:absolute; */
+	width:100%;
+	height:14%;
+/* 	border-bottom:1px solid black; */
+/* 	margin-bottom:20%; */
+}
+
+.bottom-area-chatlist{
+
+	width:88%;
+	height:0.2%;
+	border:1px solid #0E6D62;
+	background-color: #0E6D62;
+	margin:0% auto;
+/* 	margin-bottom:6%; */
+	margin-top:20%;
 }
