--- a/sixman/src/main/webapp/resources/css/approval/lineAdd.css
+++ b/sixman/src/main/webapp/resources/css/approval/lineAdd.css
@@ -31,6 +31,13 @@
     grid-template-columns: 0.3fr 0.5fr 1fr 0.5fr 0.5fr 0.3fr;
     border-bottom: 1px solid #ddd;
 }
+.item input{
+    width: 20px;
+    text-align: center;
+    border: none;
+    background: none;
+    outline: none;
+}
 
 .item div:last-of-type{
     display: flex;
