--- a/sixman/src/main/webapp/resources/css/approval/lineList.css
+++ b/sixman/src/main/webapp/resources/css/approval/lineList.css
@@ -18,9 +18,13 @@
     display: grid;
     justify-items: center;
     align-items: center;
-    grid-template-columns: 0.5fr 0.5fr 4fr 1fr;
+    grid-template-columns: 0.3fr 0.5fr 4fr 1fr;
     background-color: #ddd;
     font-weight: 700;
+}
+
+.item > div:last-child{
+    grid-column: 7/8;
 }
 
 .item{
@@ -28,7 +32,7 @@
     display: grid;
     justify-items: center;
     align-items: center;
-    grid-template-columns: 0.5fr 0.5fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.3fr 0.5fr 1fr 1fr 1fr 1fr 1fr;
     border-bottom: 1px solid #ddd;
 }
 
