오류수정 및 더미 프사 커밋

--- a/sixman/src/main/webapp/resources/css/admin/member/detail.css
+++ b/sixman/src/main/webapp/resources/css/admin/member/detail.css
@@ -49,12 +49,12 @@
     padding: 0px 0px 5px 20px;
 }
 .header > label {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
 }
 .header > span {
-    font-size: 28px;
-    margin-right: 10px;
+    font-size: 23px;
+    margin-right: 5px;
     color: var(--main-color);
 }
 #companyLogo {
@@ -260,15 +260,27 @@
     padding: 10px;
 }
 .title {
-    color: var(--main-color);
-    font-size: 20px;
-    font-weight: 600;
-    border-bottom: 1px solid var(--main-color);
-    padding-bottom: 10px;
     display: flex;
+    justify-content: flex-start;
     align-items: center;
+    border-bottom: 1px solid var(--main-color-dark);
+    padding: 3px 0;
+    margin-bottom: 10px;
     justify-content: space-between;
 }
+
+.title h2 span {
+    color: var(--main-color);
+    margin-right: 5px;
+}
+
+.title h2 {
+    font-size: 15px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+}
+
 .title > input {
     display: none;
 }
@@ -282,6 +294,7 @@
     padding: 5px;
 }
 
+.file-info,
 #file-info {
     display: flex;
     justify-content: space-between;
@@ -294,9 +307,25 @@
 .addfile > span {
     margin-left: 10px;
     padding: 5px 0 5px 0;
+    font-size: 13px;
 }
 
+.fileInThis {
+    font-weight: 700;
+    color: var(--main-color-dark);
+}
+
+.file-info > label,
+#file-info > label {
+    font-size: 13px;
+    text-align: center;
+}
+.file-info > .checked > span,
+#file-info > .checked > span,
+.file-info > span,
 #file-info > span {
+    font-size: 18px;
+    color: var(--bo-60);
     margin-left: 20px;
 }
 
@@ -317,22 +346,26 @@
     color: #fff;
     display: flex;
     align-items: center;
+    font-size: 13px;
 }
 
 .plus span {
     margin-right: 5px;
-    font-size: 15px;
+    font-size: 13px;
 }
 .plus:hover {
     background-color: #17a897;
 }
+
 .remove {
     display: flex;
+    align-items: center;
     color: #9d9d9d;
     border: 1px solid #fff;
     background: none;
     cursor: pointer;
     padding: 3px 10px;
+    font-size: 13px;
 }
 
 .remove span {
@@ -350,14 +383,13 @@
     align-items: center;
 }
 
+.checked span {
+    margin-left: 5px;
+}
+
 .hide {
     display: none;
 }
-
-.checked span {
-    margin-left: 20px;
-}
-
 #controller {
     display: flex;
     align-content: center;
@@ -384,7 +416,6 @@ input,
 select {
     outline-color: #17a897;
 }
-
 
 .write .error {
     border: 1px solid #e85c5c;
