--- a/sixman/src/main/webapp/resources/css/member/login.css
+++ b/sixman/src/main/webapp/resources/css/member/login.css
@@ -41,9 +41,9 @@ main {
     object-fit: fill;
 }
 #loginBox {
-    padding: 30px 30px 0px 30px;
+    padding: 50px 50px 30px 50px;
     width: 25%;
-    height: 50%;
+    max-height: 50%;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -70,11 +70,19 @@ main {
 
 form {
     width: 100%;
-    height: 75%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    gap: 30px;
 }
+
+#inputUserInfo {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
 #memberId,
 #memberPwd {
     display: flex;
@@ -94,7 +102,7 @@ form {
 
 form input[type='submit'] {
     width: 100%;
-    height: 20%;
+    height: 50px;
     background-color: var(--main-color);
     border: none;
     color: #fff;
