학원 등원 전 커밋

--- a/sixman/src/main/webapp/resources/css/project/create.css
+++ b/sixman/src/main/webapp/resources/css/project/create.css
@@ -197,7 +197,9 @@ option {
     color: #2e7aff;
 }
 
-input[name='prjmem'] {
+input[name='prjmem'],
+input[name='teammem'],
+input[name='deptmem'] {
     outline: none;
     border: none;
     color: #2e7aff;
