--- a/sixman/src/main/webapp/resources/css/admin/company/edit.css
+++ b/sixman/src/main/webapp/resources/css/admin/company/edit.css
@@ -5,32 +5,41 @@
     height: 100%;
     gap: 40px;
 }
+.dept-title {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-bottom: 1px solid var(--main-color-dark);
+    padding: 3px 0;
+    margin-bottom: 10px;
+}
 
+.dept-title span {
+    color: var(--main-color);
+    margin-right: 5px;
+}
+
+.dept-title p {
+    font-size: 15px;
+    font-weight: 600;
+}
 .edit-wrap {
-    width: 70%;
+    width: 100%;
     display: flex;
     padding: 20px;
+    gap: 40px;
 }
 
 .edit-menu {
     height: 100%;
-    width: 20%;
-    border-right: 1px solid var(--main-color-dark);
-    display: flex;
-    justify-content: end;
+    width: 15%;
     padding: 20px;
-}
-
-.edit-menu ul {
-    margin-top: 50px;
 }
 
 .edit-menu ul li {
     padding: 10px;
-    text-align: right;
     font-size: 15px;
     font-weight: 600;
-    color: var(--bo-40);
     cursor: pointer;
 }
 
@@ -69,7 +78,7 @@ input[name='edit'] {
     display: flex;
     justify-content: center;
     gap: 50px;
-    padding-top: 100px;
+    padding: 100px 200px;
 }
 
 .edit-menu ul li:hover label {
@@ -78,6 +87,7 @@ input[name='edit'] {
 }
 .edit-company form {
     width: 100%;
+    padding: 0px 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -291,6 +301,7 @@ label[for='companyLogo']:hover {
 .dept-list {
     padding: 10px;
     width: 100%;
+    height: 200px;
     display: flex;
     flex-direction: column;
     gap: 5px;
