--- a/sixman/src/main/webapp/resources/css/admin/company/test.css
+++ b/sixman/src/main/webapp/resources/css/admin/company/test.css
@@ -3,9 +3,168 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    gap: 30px;
+}
+.head{
+    width: 100%;
+    height: 20%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
 }
 
-.edit-wrap {
+.head .box{
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    display: flex;
+    padding: 20px;
+    gap: 20px;
+}
+.content{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.edit{
+    width: 30%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+    justify-content: center;
+}
+
+.edit span{
+    font-size: 75px;
+}
+
+.edit input{
+    background-color: transparent;
+    border: 1.5px solid #fff;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.title{
+    font-size: 17px;
+    font-weight: 500;
+}
+
+#company .edit input:hover{
+    background-color: #fff;
+    border: 1.5px solid transparent;
+    border-radius: 3px;
+    color: #A75CF2;
+    font-weight: 600;
+}
+
+#position .edit input:hover{
+    background-color: #fff;
+    border: 1.5px solid transparent;
+    border-radius: 3px;
+    color: #1ac465;
+    font-weight: 600;
+}
+
+#dept .edit input:hover{
+    background-color: #fff;
+    border: 1.5px solid transparent;
+    border-radius: 3px;
+    color: #217af4;
+    font-weight: 600;
+}
+
+#pay .edit input:hover{
+    background-color: #fff;
+    border: 1.5px solid transparent;
+    border-radius: 3px;
+    color: #eab003;
+    font-weight: 600;
+}
+
+#position .content{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.potitionCount{
+    font-size: 75px;
+    font-weight: 500;
+}
+#company{
+    background-color: #A75CF2;
+}
+
+
+#dept{
+    background-color: #217af4;
+}
+
+#position{
+    background-color: #1ac465;
+}
+
+#pay{
+    background-color: #eab003;
+}
+
+.section{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    gap: 30px;
+}
+
+#memberList{
+    width: 80%;
+    height: 100%;
+}
+
+
+#newbieList{
+    width: 20%;
+    height: 100%;
+}
+/* 회사설정 */
+.companyName{
+    font-size: 20px;
+    font-weight: 900;
+}
+.companyInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.companyAddress,
+.companyPhone{
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+}
+
+.companyPhone span,
+.companyAddress span{
+    margin-right: 5px;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.paySalary{
+    font-size: 22px;
+}
+/* .edit-wrap {
     width: 100%;
     height: 90%;
     display: flex;
@@ -301,20 +460,24 @@ label[for='companyLogo']:hover {
     overflow-y: scroll;
 }
 
-.position-list::-webkit-scrollbar-thumb,
+/* .position-list::-webkit-scrollbar-thumb,
 .team-list::-webkit-scrollbar-thumb,
 .dept-list::-webkit-scrollbar-thumb {
-    height: 30%; /* 스크롤바의 길이 */
-    background: #217af4; /* 스크롤바의 색상 */
-    border-radius: 10px;
-}
-
+    display: hidden;
+} */
+/* 
+.position-list::-webkit-scrollbar,
+.team-list::-webkit-scrollbar,
+.dept-list::-webkit-scrollbar {
+    width: 10px;
+} */
+/* 
 .position-list::-webkit-scrollbar-track,
 .team-list::-webkit-scrollbar-track,
 .dept-list::-webkit-scrollbar-track {
-    background: rgba(33, 122, 244, 0.1); /*스크롤바 뒷 배경 색상*/
-}
-
+    display: hidden;
+} */
+/* 
 .position-item,
 .dept-item,
 .team-item {
@@ -414,4 +577,4 @@ label[for='companyLogo']:hover {
 
 #deptNo {
     display: none;
-}
+} */ */
