메인페이지 및 관리자페이지 분리

--- a/sixman/src/main/webapp/resources/css/chat.css
+++ b/sixman/src/main/webapp/resources/css/chat.css
@@ -14,6 +14,7 @@
     transition: 0.5s;
 
     overflow: hidden;
+    background-color: white;
 }
 #m-outer span:not(.member-item){
     cursor: pointer;
